<resources>
    <string name="app_name">LectorFeedsRSS</string>
    <!-- string name="pubdate_format">%1$tA, %1$td %1$tB %1$tY - %1$tH:%1$tM</string -->
    <string name="pubdate_format">%1$tY/%1$tm/%1$td %1$tH:%1$tM</string>
    <string name="label_forgot_password">Forgot your password?</string>
    <string name="label_create_account">No account yet? Create one</string>
    <string name="create_user_with_email_success">Create user with email: Success!</string>
    <string name="login_user_with_email_success">Login user with email: Success!</string>
    <string name="email_input">Input an email</string>
    <string name="pass_input">Input a password</string>
    <string name="pass_length">Password length must have more than 6 characters</string>
    <string name="dialog_session">Starting session…</string>
    <string name="authentication_error">User or password error</string>
    <string name="connectivity_error">Connectivity error</string>
    <string name="login_error">Session starting error</string>
    <string name="content_picture">Content picture</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_login">Login</string>
    <string name="title_contents">Contents</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_feed_contents">Feed Contents</string>
    <string name="title_read_later">Read Later</string>
    <string name="title_add_group">Add Group</string>
    <string name="title_add_feed">Add Feed</string>
    <string name="title_feed_list_select">Select Feed</string>
    <string name="title_today">Today</string>
    <string name="title_all">All</string>
    <string name="menu_option_mark_as_read">Mark as read</string>
    <string name="menu_option_rename">Rename</string>
    <string name="menu_option_delete">Delete</string>
    <string name="menu_option_remove_from_favorites">Remove from favorites</string>
    <string name="menu_option_unfollow">Unfollow</string>
    <string name="title_mark_all_as_read">Mark all as read</string>
    <string name="menu_option_mark_as_read_all_articles">All articles</string>
    <string name="title_mark_as_unread">Mark as unread</string>
    <string name="show_unread_only">Show unread only</string>
    <string name="pref_feed_options">Feed options</string>
    <string name="pref_show_unread_only">pref_show_unread_only</string>
    <string name="title_mark_as_read_later">Mark as read later</string>
    <string name="msg_marked_for_read_later">Marked for read later</string>
    <string name="msg_unmarked_for_read_later">Unmarked for read later</string>
    <string name="msg_marked_as_unread">Marked as unread</string>
    <string name="msg_marked_as_read">Marked as read</string>
    <string name="msg_added_to_favorites">Added to favorites</string>
    <string name="msg_removed_from_favorites">Removed from favorites</string>
    <string name="title_mark_unmark_as_read_later">Mark/unmark for read later</string>
    <string name="screen_title_all_feeds">All Feeds</string>
    <string name="screen_title_read_later">Read later</string>
    <string name="screen_title_favorites">Favorites</string>
    <string name="screen_title_settings">Settings</string>
    <string name="menu_option_add_to_favorites">Add to favorites</string>
    <string name="msg_source_removed">Source removed</string>
    <string name="msg_source_added">Source added</string>
    <string name="msg_operation_not_executed">Operation not executed</string>
    <string name="msg_group_removed">Group removed</string>
    <string name="msg_group_added">Group added</string>
    <string name="screen_title_add_group">Add Group</string>
    <string name="screen_title_add_feed">Add Feed</string>
    <string name="hint_group_name">Group name</string>
    <string name="btn_add">Add</string>
    <string name="err_name_cant_be_empty">Name can\'t be empty</string>
    <string name="msg_value_already_exists">Value already exists</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save">Save</string>
    <string name="msg_group_updated">Group updated</string>
    <string name="title_edit_group">Edit Group</string>
    <string name="hint_feed_link_url">Feed link URL (ie: codezone.es)</string>
    <string name="msg_feed_added">Feed added</string>
    <string name="msg_error_network_operation_failed_with_403">Error network operation failed with 403</string>
    <string name="msg_error_with_null_message">Error with null message</string>
    <string name="msg_error_with_some_unprogrammed_message">Error with some unprogrammed message error case</string>
    <string name="err_url_cant_be_empty">URL can\'t be empty</string>
    <string name="msg_message_type_not_recognized">Message type not recognized</string>
    <string name="msg_message_is_null">Message is null!</string>
</resources>