<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_login"
        android:visible="false" />

    <item
        android:id="@+id/nav_feed_contents"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_contents" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_read_later"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_read_later" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_logout" />

</menu>