<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_today"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="@dimen/menu_icon_width"
            android:layout_margin="8dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content_picture"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_today_holo_light_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nav_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_today"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_today"
            app:layout_constraintBottom_toBottomOf="@id/img_today" />

        <ImageView
            android:id="@+id/img_nav_favorites"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="@dimen/menu_icon_width"
            android:layout_margin="8dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content_picture"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_favorites_holo_light_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_today" />

        <TextView
            android:id="@+id/nav_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_favorites"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_nav_favorites"
            app:layout_constraintTop_toTopOf="@id/img_nav_favorites"
            app:layout_constraintBottom_toBottomOf="@id/img_nav_favorites"/>

        <ImageView
            android:id="@+id/img_all"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="@dimen/menu_icon_width"
            android:layout_margin="8dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content_picture"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_all_holo_light_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_nav_favorites" />

        <TextView
            android:id="@+id/nav_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_all"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_all"
            app:layout_constraintTop_toTopOf="@id/img_all"
            app:layout_constraintBottom_toBottomOf="@id/img_all"/>

        <ImageView
            android:id="@+id/img_read_later"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="@dimen/menu_icon_width"
            android:layout_margin="8dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content_picture"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_read_later_holo_light_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_all" />

        <TextView
            android:id="@+id/nav_read_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_read_later"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_read_later"
            app:layout_constraintTop_toTopOf="@id/img_read_later"
            app:layout_constraintBottom_toBottomOf="@id/img_read_later"/>

        <com.blogspot.fdbozzo.lectorfeedsrss.ui.drawer.NonScrollingExpandableListView
            android:id="@+id/expandableListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_read_later">

        </com.blogspot.fdbozzo.lectorfeedsrss.ui.drawer.NonScrollingExpandableListView>

        <ImageView
            android:id="@+id/img_nav_settings"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="@dimen/menu_icon_width"
            android:layout_margin="8dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content_picture"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_settings_holo_light_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expandableListView" />

        <TextView
            android:id="@+id/nav_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_settings"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_nav_settings"
            app:layout_constraintTop_toTopOf="@id/img_nav_settings"
            app:layout_constraintBottom_toBottomOf="@id/img_nav_settings"/>

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="@dimen/menu_icon_width"
            android:layout_margin="8dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content_picture"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logout_holo_light_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_nav_settings" />

        <TextView
            android:id="@+id/nav_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title_logout"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_logout"
            app:layout_constraintStart_toEndOf="@id/img_logout"
            app:layout_constraintTop_toTopOf="@+id/img_logout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>