<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>
        <variable
            name="viewModel"
            type="com.blogspot.fdbozzo.lectorfeedsrss.MainSharedViewModel"/>
        <variable
            name="fragment"
            type="com.blogspot.fdbozzo.lectorfeedsrss.ui.main.BottomSheetFeedOptionsMenuFragment"/>
        <variable
            name="feed"
            type="com.blogspot.fdbozzo.lectorfeedsrss.data.domain.feed.Feed" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomSheetFeedOptions">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/txtTituloMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                tools:text="Nombre del Feed"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgMarkAsRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:onClick="@{() -> fragment.updateMarkFeedAsReadFromBottomSheetFeedMenu(fragment.tituloMenu)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTituloMenu"
                app:srcCompat="@drawable/ic_mark_as_read_holo_light_24dp" />

            <TextView
                android:id="@+id/txtMarkAsRead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/menu_option_mark_as_read"
                android:onClick="@{() -> fragment.updateMarkFeedAsReadFromBottomSheetFeedMenu(fragment.tituloMenu)}"
                app:layout_constraintBottom_toBottomOf="@+id/imgMarkAsRead"
                app:layout_constraintStart_toEndOf="@+id/imgMarkAsRead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgMarkAsRead" />

            <ImageView
                android:id="@+id/imgRename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgMarkAsRead"
                app:srcCompat="@drawable/icons8_rename_24" />

            <TextView
                android:id="@+id/txtRename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/menu_option_rename"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imgRename"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgRename"
                app:layout_constraintTop_toTopOf="@+id/imgRename" />

            <ImageView
                android:id="@+id/imgAddToFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> fragment.addFeedToFavorites(fragment.tituloMenu)}"
                android:visibility="@{fragment.addFeedToFavoritesVisibility}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgRename"
                app:srcCompat="@drawable/ic_favorites_holo_light_24dp" />

            <TextView
                android:id="@+id/txtAddToFavorites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/menu_option_add_to_favorites"
                android:onClick="@{() -> fragment.addFeedToFavorites(fragment.tituloMenu)}"
                android:visibility="@{fragment.addFeedToFavoritesVisibility}"
                app:layout_constraintBottom_toBottomOf="@+id/imgAddToFavorites"
                app:layout_constraintStart_toEndOf="@+id/imgAddToFavorites"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgAddToFavorites" />

            <ImageView
                android:id="@+id/imgRemoveFromFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> fragment.removeFeedFromFavorites(fragment.tituloMenu)}"
                android:visibility="@{fragment.removeFeedFromFavoritesVisibility}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAddToFavorites"
                app:srcCompat="@drawable/ic_favorites_holo_light_24dp" />

            <TextView
                android:id="@+id/txtRemoveFromFavorites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/menu_option_remove_from_favorites"
                android:onClick="@{() -> fragment.removeFeedFromFavorites(fragment.tituloMenu)}"
                android:visibility="@{fragment.removeFeedFromFavoritesVisibility}"
                app:layout_constraintBottom_toBottomOf="@+id/imgRemoveFromFavorites"
                app:layout_constraintStart_toEndOf="@+id/imgRemoveFromFavorites"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgRemoveFromFavorites" />

            <ImageView
                android:id="@+id/imgUnfollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> fragment.unfollowFeed(fragment.tituloMenu)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgRemoveFromFavorites"
                app:srcCompat="@drawable/ic_delete_holo_light_24dp" />

            <TextView
                android:id="@+id/txtUnfollow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/menu_option_unfollow"
                android:onClick="@{() -> fragment.unfollowFeed(fragment.tituloMenu)}"
                app:layout_constraintBottom_toBottomOf="@+id/imgUnfollow"
                app:layout_constraintStart_toEndOf="@+id/imgUnfollow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgUnfollow" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>